test/semantic_errors/invalid_pointer_deref1.mc
void main() {
    int p;
    int b;
    b = *p;  /* p is not a pointer */
}